--- a/.gitignore
+++ b/.gitignore
@@ -3,9 +3,11 @@ __pycache__/
 *.py[cod]
 *$py.class
 
-# C extensions ttt
+# C extensions
 *.so
 .idea
+*.jpg
+*.mp4
 
 # Distribution / packaging
 .Python
